sonarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  template:
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /series
              name: series
      volumes:
        - name: config
          hostPath:
            path: /opt/sonarr/config
            type: Directory
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: Directory
        - name: series
          hostPath:
            path: /tank/media/series
            type: Directory
